--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title></title>
 	<!-- Webix Library -->
-	<script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>
-	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">
+	<script type="text/javascript" src="code-webix/webix.js"></script>
+	<link rel="stylesheet" type="text/css" href="code-webix/webix.css">
 
 	<!-- App -->
 	<script type="text/javascript" src="codebase/myapp.js"></script>
